
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


typedef int thost ;
struct hostent {char* h_name; } ;
struct TYPE_5__ {char* user_shost; TYPE_1__* p_architecture; } ;
typedef TYPE_2__ hudo_t ;
struct TYPE_4__ {scalar_t__ fqdn; } ;


 int MAXHOSTNAMELEN ;
 struct hostent* gethostbyname (char*) ;
 scalar_t__ gethostname (char*,int) ;
 char* strchr (char*,char) ;
 void* strdup (char*) ;

int
user_shost( hudo_t * p_hudo )
{
    char thost[ MAXHOSTNAMELEN ];
    char * user_host;
    struct hostent * hp;
    char * p;

    if ( gethostname(thost, sizeof(thost)) ) {
        user_host = "localhost";
    } else {
        user_host = strdup( thost );
        if ( user_host == ((void*)0) ) {
            return( -1 );
        }
    }

    if ( p_hudo->p_architecture->fqdn ) {
        if ( (hp = gethostbyname(user_host)) ) {
            user_host = strdup( hp->h_name );
            if ( user_host == ((void*)0) ) {
                return( -1 );
            }
        }
    }

    if ( (p = strchr(user_host, '.')) ) {
        *p = '\0';
        p_hudo->user_shost = strdup( user_host );
        if ( p_hudo->user_shost == ((void*)0) ) {
            return( -1 );
        }
    } else {
        p_hudo->user_shost = user_host;
    }

    return( 0 );
}
